<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_report">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center_horizontal"
        android:includeFontPadding="false"
        android:text="@string/calc_bmi"
        android:textAllCaps="true"
        android:textColor="@color/FF2C4B34"
        android:textSize="@dimen/med_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_medium"
        android:includeFontPadding="false"
        android:text="@string/weight"
        android:textColor="@color/FF2C4B34"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/btn_pound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:background="@drawable/rect_layout_border"
        android:fontFamily="@font/montserrat_medium"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/lb"
        android:textColor="@color/FFD37128"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />


    <TextView
        android:id="@+id/btn_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:background="@drawable/bg_btn_conner_5dp"
        android:fontFamily="@font/montserrat_medium"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/kg"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/btn_pound"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/btn_kg"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5">


        <EditText
            android:id="@+id/edt_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/lb"
            android:importantForAutofill="no"
            android:inputType="number|numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/txt_light_color"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/edt_kg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/kg"
            android:importantForAutofill="no"
            android:inputType="number|numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/txt_light_color"
            android:visibility="visible"
            tools:ignore="UnusedAttribute" />


    </LinearLayout>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_medium"
        android:includeFontPadding="false"
        android:text="@string/height"
        android:textColor="@color/FF2C4B34"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <TextView
        android:id="@+id/btn_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_conner_5dp"
        android:fontFamily="@font/montserrat_medium"
        android:includeFontPadding="false"
        android:padding="11dp"
        android:text="@string/in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/btn_pound"
        app:layout_constraintStart_toStartOf="@+id/btn_pound"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/btn_cm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_layout_border"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/cm"
        android:textColor="@color/FFD37128"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/btn_kg"
        app:layout_constraintStart_toStartOf="@+id/btn_kg"
        app:layout_constraintTop_toTopOf="@+id/textView6" />


    <Button
        android:id="@+id/btn_cal_bmi"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_btn_conner_5dp"
        android:fontFamily="@font/montserrat_medium"
        android:includeFontPadding="false"
        android:text="@string/calc"
        android:textColor="@color/white"
        android:textSize="@dimen/med_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <include
        layout="@layout/layout_input_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/btn_cm"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>