<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="16dp"
    android:paddingRight="24dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:fontFamily="@font/montserrat_medium"
            android:includeFontPadding="false"
            android:text="@string/workout_title"
            android:textColor="@color/FF2C4B34"
            android:textSize="@dimen/small_txt" />

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/FF2C4B34"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            tools:ignore="Autofill,LabelFor,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            android:id="@+id/tv_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_medium"
            android:includeFontPadding="false"
            android:text="@string/duration"
            android:textColor="@color/FF2C4B34"
            android:textSize="@dimen/small_txt" />


        <EditText
            android:id="@+id/edt_rest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/FF2C4B34"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            tools:ignore="Autofill,LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_medium"
            android:includeFontPadding="false"
            android:text="@string/description"
            android:textColor="@color/FF2C4B34"
            android:textSize="@dimen/small_txt" />


        <EditText
            android:id="@+id/edt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/FF2C4B34"
            android:fontFamily="@font/montserrat_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            tools:ignore="Autofill,LabelFor,TextFields" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lnrBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@null"
            android:fontFamily="@font/montserrat_medium"
            android:includeFontPadding="false"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/FF2C4B34"
            android:textSize="@dimen/med_font" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:fontFamily="@font/montserrat_medium"
            android:includeFontPadding="false"
            android:text="@string/done"
            android:textAllCaps="true"
            android:textColor="@color/FF2C4B34"
            android:textSize="@dimen/med_font" />
    </RelativeLayout>
</LinearLayout>