<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_tts"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_tts"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="@string/tts"
                android:textColor="@color/txt_light_color"
                android:textSize="@dimen/med_font" />
        </LinearLayout>

        <Switch
            android:id="@+id/switch_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:theme="@style/AppTheme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_volume_up_black_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:text="@string/sound"
                android:textColor="@color/txt_light_color"
                android:textSize="@dimen/med_font" />
        </LinearLayout>

        <Switch
            android:id="@+id/switch_tts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:theme="@style/AppTheme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/yellow"
            android:drawableStart="@drawable/ic_record_voice_over_black_24dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:text="@string/coach_tip"
            android:textSize="@dimen/med_font"
            tools:ignore="UnusedAttribute" />

        <Switch
            android:id="@+id/switchCoatchTips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:theme="@style/AppTheme" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sound_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@null"
        android:text="@string/ok"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/yellow"
        android:visibility="gone"
        tools:ignore="RtlHardcoded" />

</LinearLayout>