<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="7dp"
                android:background="@drawable/bg_circle_border">

                <TextView
                    android:id="@+id/tv_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorPrimary" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layoutDirection="locale"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textDirection="locale"
                    android:textSize="@dimen/med_font" />

                <TextView
                    android:id="@+id/tv_rest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:maxLines="1"
                    android:text="@string/duration"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:textDirection="locale"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="locale"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_exercise_counts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:drawableStart="@drawable/ic_dumbell"
                            android:drawablePadding="3dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:maxLines="1"
                            android:text="@string/exercise"
                            android:textColor="@color/black"
                            android:textDirection="locale"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/tv_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:drawableStart="@drawable/ic_info_outline_black_24dp"
                            android:drawablePadding="3dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:maxLines="1"
                            android:text="@string/description"
                            android:textColor="@color/black"
                            android:textDirection="locale"
                            android:textSize="@dimen/small_txt" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/more_opt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_more_vert_black_24dp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>